@@ -1,7 +1,7 @@
 Package: tm
 Title: Text Mining Package
 Version: 0.5-7.2
-Date: 2011-12-23
+Date: 2012-01-14
 Authors@R: person("Ingo", "Feinerer", role = c("aut", "cre"),
 	          email = "feinerer@logic.at")
 Depends: R (>= 2.14.0), methods
